<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".FiltroActivity"
    tools:showIn="@layout/activity_filter">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblEstado"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/lblEstado"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinnerEstados"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:ems="10"
            android:textSize="20sp"
            android:prompt="@string/lblEstado"
            android:focusableInTouchMode="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblCidade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/lblCidade"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinnerCidades"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblBairro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/lblBairro"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinnerBairros"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblTipo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/lblTipo"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinnerTipo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblPreco"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/lblPreco"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinnerPreco"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblQuartos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/lblQuartos"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinnerQuartos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBuscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#23AFD2"
            android:text="@string/lblBuscar"
            android:layout_marginTop="10dp" />
    </LinearLayout>
</LinearLayout>
